--- a/WireWineRain/Assembly-CSharp.csproj
+++ b/WireWineRain/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\Unity 2022.3.7f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ArduinoInputs\RainBlinkLight.cs" />
     <Compile Include="Assets\ArduinoInputs\SerialMagnets.cs" />
   </ItemGroup>
   <ItemGroup>
